--- a/moviesquare/src/main/resources/templates/main/brandnew.html
+++ b/moviesquare/src/main/resources/templates/main/brandnew.html
@@ -1,5 +1,5 @@
 <html xmlns:th="http://www.thymeleaf.org">
-<div th:fragment="hotgifs">
+<div th:fragment="brandnew">
   <style>
 #video{
   object-fit: initial;
@@ -16,7 +16,7 @@
     <div style="width: 1100px; " class="row">  
       <div class="col-md-12">
         <div id="Carousel" class="carousel slide">
-          <h1 style="color: aliceblue; ">🔥 인기 움짤 🔥</h1>
+          <h1 style="color: aliceblue; ">🔎 새로 올라온 움짤</h1>
           <ol>
             <li data-target="#Carousel" data-slide-to="0" class="active"></li>
             <li data-target="#Carousel" data-slide-to="1"></li>
@@ -34,6 +34,7 @@
           <a data-slide="next" href="#Carousel" class="right carousel-control"></a>
         </div>
         <!--.Carousel-->
+        <h1 style="color: aliceblue; ">🎬 스토리</h1>
 
       </div>
     </div>
@@ -42,10 +43,10 @@
   <script th:src="@{/js/jquery-3.5.1.min.js}"></script>
   <th:block layout:fragment="script">
     <script th:inline="javascript">
-      let carouselinner2=document.querySelector(".carousel-inner");
+      let carouselinner=document.querySelector(".carousel-inner");
       $(function () {
         $.ajax({
-          url: '/main/trending',
+          url: '/main/brandnew',
           type: 'get',
           success: function (data) {
             let row1 = document.createElement("div");
@@ -81,7 +82,7 @@
             item.setAttribute("class", "item active");
 
             item.appendChild(row1);
-            carouselinner2.appendChild(item);
+            carouselinner.appendChild(item);
 
 
             let row2 = document.createElement("div");  
@@ -114,7 +115,7 @@
             let item2 = document.createElement("div"); 
             item2.setAttribute("class","item");
             item2.appendChild(row2);
-            carouselinner2.appendChild(item2);
+            carouselinner.appendChild(item2);
           }
         });
       });
