--- a/moviesquare/src/main/resources/templates/main/brandnew.html
+++ b/moviesquare/src/main/resources/templates/main/brandnew.html
@@ -15,35 +15,35 @@
   <div class="container">
     <div style="width: 1100px; " class="row">  
       <div class="col-md-12">
-        <div id="Carousel" class="carousel slide">
+        <div id="Carousels" class="carousel slide">
           <h1 style="color: aliceblue; ">🔎 새로 올라온 움짤</h1>
           <ol>
-            <li data-target="#Carousel" data-slide-to="0" class="active"></li>
-            <li data-target="#Carousel" data-slide-to="1"></li>
+            <li data-target="#Carousels" data-slide-to="0" class="active"></li>
+            <li data-target="#Carousels" data-slide-to="1"></li>
+          </ol>      
 
-          </ol>
-
-          <div class="carousel-inner" style="height:130px" > 
+          <div class="carousel-inner two" style="height:130px" > 
           
 
-      
+            
 
           </div>
           <!--.carousel-inner-->
-          <a data-slide="prev" href="#Carousel" class="left carousel-control"></a>
-          <a data-slide="next" href="#Carousel" class="right carousel-control"></a>
+          <a data-slide="prev" href="#Carousels" class="left carousel-control"></a>
+          <a data-slide="next" href="#Carousels" class="right carousel-control"></a>
         </div>
         <!--.Carousel-->
-        <h1 style="color: aliceblue; ">🎬 스토리</h1>
 
       </div>
+      <h1 style="color: aliceblue; margin-left: 15;"> 🎬 스토리</h1>
+
     </div>
   </div>
   <!--.container-->
   <script th:src="@{/js/jquery-3.5.1.min.js}"></script>
   <th:block layout:fragment="script">
     <script th:inline="javascript">
-      let carouselinner=document.querySelector(".carousel-inner");
+      let carouselinner2=document.querySelector(".two");
       $(function () {
         $.ajax({
           url: '/main/brandnew',
@@ -82,7 +82,7 @@
             item.setAttribute("class", "item active");
 
             item.appendChild(row1);
-            carouselinner.appendChild(item);
+            carouselinner2.appendChild(item);
 
 
             let row2 = document.createElement("div");  
@@ -115,7 +115,7 @@
             let item2 = document.createElement("div"); 
             item2.setAttribute("class","item");
             item2.appendChild(row2);
-            carouselinner.appendChild(item2);
+            carouselinner2.appendChild(item2);
           }
         });
       });
